force-app/main/default/objects/Student_Marks__c/Student_Marks__c.object-meta.xml
<CustomObject>
    <label>Student Marks</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Student Marks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Marks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>