force-app/main/default/objects/Student_Marks__c/fields/Extract_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Extract_Day_of_Week__c</fullName>
    <formula>CASE(
  MOD( Start_Date__c  - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extract Day of Week</label>
    <type>Text</type>
</CustomField>