force-app/main/default/objects/Student_Marks__c/fields/Marks_English__c.field-meta.xml
<CustomField>
    <fullName>Marks_English__c</fullName>
    <label>Marks English</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>