force-app/main/default/objects/Student_Marks__c/fields/Student_Passed__c.field-meta.xml
<CustomField>
    <fullName>Student_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Passed</label>
    <type>Checkbox</type>
</CustomField>