force-app/main/default/objects/Student_Marks__c/validationRules/Check_the_start_day.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_the_start_day</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt; Today()</errorConditionFormula>
    <errorMessage>Start date cannot be in future</errorMessage>
</ValidationRule>