force-app/main/default/objects/Student_Marks__c/validationRules/Validate_Marks.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Marks</fullName>
    <active>true</active>
    <errorConditionFormula>Marks__c &lt; 0  ||  Marks__c &gt;100</errorConditionFormula>
    <errorMessage>Marks should be greater than 0, marks should be lesser than 101.</errorMessage>
</ValidationRule>