force-app/main/default/objects/Student_Marks__c/validationRules/validation_rules_for_passing.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_rules_for_passing</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Marks__c &lt; 40,  Student_Passed__c = true)</errorConditionFormula>
    <errorMessage>Student Failed, you should not mark the student as passed. To obtain the pass marks student should be attaining 40+ marks.</errorMessage>
</ValidationRule>